# simbotix_otel

./: README.md  pyproject.toml
ansible/: README.md  inventory.example.yml  playbook.yml
ansible/templates/: fluent-bit.conf.j2
scripts/: install.sh
simbotix_otel/: __init__.py  app.py  hooks.py  modules.txt
